--- a/_config.yml
+++ b/_config.yml
@@ -4,4 +4,5 @@ markdown: kramdown
 
 # permalink: /blog/:year-:month/:title
 
-theme: jekyll-theme-midnight
+# theme: jekyll-theme-midnight
+theme: jekyll-theme-minimal
