--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@
 name: MC, Github CodeLabs
 markdown: kramdown
 
-permalink: /codelabs/:year/:month/:title
+permalink: /codelabs/:year-:month/:title
 theme: jekyll-theme-minimal
