--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@
 name: MC, Github CodeLabs
 markdown: kramdown
 
-permalink: /codelabs/:title #:year/:month/:day/
+permalink: /codelabs/:year/:title #:year/:month/:day/
 theme: jekyll-theme-minimal
