--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,6 @@
 name: MC, Github CodeLabs
 markdown: kramdown
 
-permalink: /codelabs/:year/:month/:day/:title
+permalink: /blog/:year-:month/:title
+
 theme: jekyll-theme-minimal
