--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,11 @@ markdown: kramdown
 
 theme: jekyll-theme-minimal
 
-permalink: /blog/:year/:month/:day/:title
+permalink: /blog/:title/
+
+collections:
+   pages:
+     output: true
+     permalink: /:path/
 
 
