--- a/_config.yml
+++ b/_config.yml
@@ -4,11 +4,11 @@ markdown: kramdown
 
 theme: jekyll-theme-minimal
 
-permalink: /codelabs/:title/
+# permalink: /:title/
 
-collections:
-   pages:
-     output: true
-     permalink: /codelabs/:path/
+# collections:
+#    pages:
+#      output: true
+#      permalink: /codelabs/:path/
 
 
