--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ markdown: kramdown
 
 theme: jekyll-theme-minimal
 
-# permalink: /:title/
+permalink: /:collection/:title/
 
 # collections:
 #    pages:
